# risu

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  on-commit.yml  on-version-tag.yml
Risu/: .editorconfig  Risu.sln
Risu/Risu/: Program.cs  Risu.csproj
Risu/Risu.Demo.GrpcService/: Program.cs  Risu.Demo.GrpcService.csproj
Risu/Risu.Demo.GrpcService/Properties/: launchSettings.json
Risu/Risu.Demo.GrpcService/Protos/: greet.proto
Risu/Risu.Demo.GrpcService/Services/: GreeterService.cs
Risu/Risu/Properties/: launchSettings.json
benches/: arena_linked_list.rs  qps.rs
benches/qps/: README.md  config.yaml  hello.js  k6.js  main.rs  tfs_cs.js  tfs_risu.js
benches/qps/definitions/: prediction_service.proto
benches/qps_http/: README.md  config.yaml  k6.js  main.rs
proto/: calculator.proto  helloworld.rs
src/: arena_linked_list.rs  buffered_body.rs  config.rs  executor.rs  lib.rs  lru.rs  main.rs  metrics.rs
src/caches/: lru.rs  mod.rs  probatory.rs  sharded.rs
src/collections/: arena_linked_list.rs  mod.rs
src/demo/: main.rs
tests/: config.yaml  tests.rs
