[package]
name = "risu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "risu"
path = "src/main.rs"

[lib]
name = "risu"

[[test]]
name = "tests"
path = "tests/tests.rs"

[[bench]]
name = "arena_linked_list"
harness = false

[dependencies]
tonic = "0.11"
prost = "0.12"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
bytes = "1.0"
simplelog = "0.12.2"
log = "0.4.21"
http-body-util = "0.1.1"
gxhash = "3.1.1"
serde_yaml = "0.9.34"
serde = "1.0.197"

[dev-dependencies]
itertools = "0.12.1"
criterion = { version = "0.5.1" }

[build-dependencies]
tonic-build = "0.11"
