[package]
name = "risu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "risu"
path = "src/main.rs"

[lib]
name = "risu"

[[test]]
name = "tests"
path = "tests/tests.rs"

[[bench]]
name = "arena_linked_list"
harness = false

[[bench]]
name = "qps"
harness = false

# [[bench]]
# name = "qps_http"
# harness = false

[dependencies]
hyper = { version = "1.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
simplelog = "0.12.2"
log = "0.4.21"
http-body-util = "0.1"
gxhash = "3.1.1"
serde_yaml = "0.9.34"
serde = "1.0.197"
rand = "0.8.5"
futures = { version = "0.3" }
hyper-util = { version = "0.1", features = ["full"] }
pin-project-lite = "0.2.14"
futures-core = "0.3.30"

[dev-dependencies]
tonic = "0.11"
prost = "0.12"
itertools = "0.12.1"
criterion = { version = "0.5.1" }

[build-dependencies]
tonic-build = "0.11"
